--- a/Chain_Of_Thought.ipynb
+++ b/Chain_Of_Thought.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkwViPnRFklSo4nDT37ghk",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNGfGmkmdHeu8xccAi3G9Mb"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Antonio14-code/Chain_Of_Thought/blob/main/Chain_Of_Thought.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -63,7 +52,7 @@
         "from IPython.display import display, Markdown\n",
         "\n",
         "# Configuración de la API\n",
-        "configure(api_key=\"AIzaSyBKERgys_Ouy9S9ev4JpXOwI0l6tI7BHXk\")\n",
+        "configure(api_key=\"TU API KEY AQUI\")\n",
         "model = GenerativeModel(\"gemini-1.5-pro\")\n",
         "\n",
         "# Definir la función para Chain of Thought - Sample\n",
